# Kainetic

./: .gitignore  Cargo.toml  LICENSE  README.md  clippy.toml  deny.toml  rustfmt.toml
.github/workflows/: ci.yml
bindings/python/: Cargo.toml  pyproject.toml
bindings/python/python/kainetic/: __init__.py
bindings/python/src/: agent.rs  context.rs  error.rs  lib.rs  provider.rs  runtime.rs  tool.rs
bindings/python/tests/: test_bindings.py
bindings/typescript/: Cargo.toml  index.d.ts  index.js  package.json  tsconfig.json
bindings/typescript/src/: agent.rs  lib.rs  provider.rs  runtime.rs  tool.rs
bindings/typescript/tests/: bindings.test.ts
crates/kainetic/: Cargo.toml
crates/kainetic-cli/: Cargo.toml
crates/kainetic-cli/src/: error.rs  main.rs
crates/kainetic-cli/src/commands/: bench.rs  deploy.rs  init.rs  inspect.rs  logs.rs  mod.rs  new.rs  run.rs  validate.rs
crates/kainetic-cloud/: Cargo.toml
crates/kainetic-cloud/src/: config.rs  error.rs  lib.rs  main.rs  server.rs
crates/kainetic-cloud/src/api/: agents.rs  audit.rs  metrics.rs  mod.rs  runs.rs  setup.rs  spans.rs  teams.rs  token.rs
crates/kainetic-cloud/src/auth/: api_key.rs  jwt.rs  mod.rs
crates/kainetic-cloud/src/db/: mod.rs  schema.rs
crates/kainetic-core/: Cargo.toml
crates/kainetic-core/benches/: react_loop.rs
crates/kainetic-core/src/: agent.rs  config.rs  context.rs  error.rs  event.rs  lib.rs  proptest_react.rs  react.rs  runtime.rs
crates/kainetic-core/tests/: agent_macro_test.rs  recovery.rs
crates/kainetic-macros/: Cargo.toml
crates/kainetic-macros/src/: lib.rs
crates/kainetic-macros/tests/: macro_errors.rs
crates/kainetic-macros/tests/ui/: agent_not_async.rs  agent_not_async.stderr  tool_no_params.rs  tool_no_params.stderr  tool_not_async.rs  tool_not_async.stderr  tool_unknown_attr.rs  tool_unknown_attr.stderr  tool_wrong_return.rs  tool_wrong_return.stderr
crates/kainetic-memory/: Cargo.toml
crates/kainetic-memory/src/: backend.rs  episodic.rs  error.rs  in_memory.rs  lib.rs  pgvector.rs  qdrant.rs  redis_backend.rs  sqlite.rs  types.rs  usearch_backend.rs  working.rs
crates/kainetic-orchestra/: Cargo.toml
crates/kainetic-orchestra/src/: error.rs  lib.rs  node.rs  outcome.rs  pipeline.rs  state_machine.rs  supervisor.rs
crates/kainetic-providers/: Cargo.toml
crates/kainetic-providers/src/: anthropic.rs  azure_openai.rs  error.rs  gemini.rs  lib.rs  mistral.rs  ollama.rs  openai.rs  openai_compat.rs  provider.rs  router.rs  types.rs
crates/kainetic-schema/: Cargo.toml
crates/kainetic-schema/src/: error.rs  ids.rs  lib.rs  message.rs  token.rs  tool.rs
crates/kainetic-telemetry/: Cargo.toml
crates/kainetic-telemetry/src/: config.rs  cost.rs  error.rs  event_handler.rs  lib.rs  metrics.rs  otel.rs  server.rs
crates/kainetic-tools/: Cargo.toml
crates/kainetic-tools/benches/: tool_dispatch.rs
crates/kainetic-tools/fuzz/: Cargo.toml
crates/kainetic-tools/fuzz/fuzz_targets/: fuzz_input_validation.rs  fuzz_tool_call.rs
crates/kainetic-tools/src/: context.rs  error.rs  lib.rs  registry.rs  tool.rs
crates/kainetic-tools/src/builtin/: code_executor.rs  datetime.rs  file_ops.rs  http_request.rs  mod.rs  shell.rs  sql_query.rs  vector_search.rs  web_fetch.rs  web_search.rs
crates/kainetic-tools/tests/: macro_tool.rs
crates/kainetic/examples/: simple-agent.rs
crates/kainetic/src/: lib.rs
dashboard/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.node.json  vite.config.ts
dashboard/src/: App.tsx  index.css
dashboard/src/api/: agents.ts  client.ts  metrics.ts  runs.ts  teams.ts  types.ts
dashboard/src/components/: ErrorMessage.tsx  Layout.tsx  RequireAuth.tsx  RunStatusBadge.tsx  Sidebar.tsx  Spinner.tsx  StatCard.tsx
dashboard/src/pages/: AgentsPage.tsx  BillingPage.tsx  CostPage.tsx  EvaluationsPage.tsx  LatencyPage.tsx  LoginPage.tsx  OverviewPage.tsx  PromptsPage.tsx  RunDetailPage.tsx  RunsPage.tsx  TeamPage.tsx
dashboard/src/store/: authStore.ts
dashboard/src/test/: authStore.test.ts  components.test.tsx  latency.test.ts  runs.test.ts
docs/: book.toml
docs/src/: SUMMARY.md  index.md
docs/src/concepts/: execution-model.md  memory.md  observability.md  pipelines.md  providers.md  react-loop.md  tools.md
docs/src/getting-started/: first-agent.md  installation.md  running-locally.md  using-tools.md
docs/src/how-to/: cost-tracking.md  custom-agent.md  custom-tool.md  deploy.md  parallel-tools.md  sqlite-memory.md  streaming.md
docs/src/reference/: agent-config.md  changelog.md  errors.md  migration-langchain.md  performance.md
examples/multi-agent-pipeline/: Cargo.toml
examples/multi-agent-pipeline/src/: main.rs
examples/observability/: docker-compose.yml  prometheus.yml  tempo.yaml
examples/observability/grafana/provisioning/dashboards/: dashboards.yaml
examples/observability/grafana/provisioning/datasources/: datasources.yaml
examples/python-agent/: example.py
examples/simple-agent/: Cargo.toml
examples/typescript-agent/: example.ts
