[package]
name = "kainetic-python"
description = "Python bindings for Kainetic via PyO3."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "kainetic"
crate-type = ["cdylib"]
doc = false   # avoids name collision with crates/kainetic in cargo doc --workspace

[dependencies]
kainetic-core = { workspace = true }
kainetic-providers = { workspace = true }
kainetic-tools = { workspace = true }
kainetic-schema = { workspace = true }
pyo3 = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
