[package]
name = "kainetic-cli"
description = "Developer CLI for Kainetic: init, run, validate, inspect, bench, deploy."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "kainetic"
path = "src/main.rs"

[dependencies]
kainetic-schema = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
indicatif = { workspace = true }
console = { workspace = true }
comfy-table = { workspace = true }
toml = { workspace = true }
reqwest = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = "3"
