[package]
name = "kainetic-macros"
description = "Procedural macros (#[tool], #[agent], #[pipeline]) for Kainetic."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"
