[package]
name = "kainetic-macros"
description = "Procedural macros (#[tool], #[agent], #[pipeline]) for Kainetic."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"

[dev-dependencies]
trybuild = { workspace = true }
kainetic-tools = { workspace = true }
kainetic-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
kainetic-schema = { workspace = true }
