[package]
name = "kainetic-schema"
description = "Shared types, error enums, and JSON Schema infrastructure for Kainetic."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
schemars = { workspace = true }
