[package]
name = "multi-agent-pipeline"
description = "Example: a three-agent pipeline built with kainetic-orchestra."
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "multi-agent-pipeline"
path = "src/main.rs"

[dependencies]
kainetic-core = { workspace = true }
kainetic-orchestra = { workspace = true }
kainetic-schema = { workspace = true }
kainetic-providers = { workspace = true }
kainetic-tools = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
